--- a/Multiple-Disease-Predection-System/diabetes-prediiction/diabetes-prediction.ipynb
+++ b/Multiple-Disease-Predection-System/diabetes-prediiction/diabetes-prediction.ipynb
@@ -744,6 +744,123 @@
    },
    "id": "5e3e0b4dae1b35e9",
    "execution_count": 44
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-16T10:49:57.828667Z",
+     "start_time": "2024-05-16T10:49:57.792315Z"
+    }
+   },
+   "id": "8fc7c0a60e360a99",
+   "execution_count": 45
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "filename = 'diabetes_model.sav'\n",
+    "pickle.dump(classifier, open(filename, 'wb'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-16T10:51:26.106578Z",
+     "start_time": "2024-05-16T10:51:26.086085Z"
+    }
+   },
+   "id": "668915b390e5455",
+   "execution_count": 46
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "loaded_model = pickle.load(open('diabetes_model.sav', 'rb'))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-16T10:51:49.993843Z",
+     "start_time": "2024-05-16T10:51:49.940931Z"
+    }
+   },
+   "id": "7909e0b800a36752",
+   "execution_count": 47
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "The person is diabetic\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_data = (5,166,72,19,175,25.8,0.587,51)\n",
+    "\n",
+    "# changing the input_data to numpy array\n",
+    "input_data_as_numpy_array = np.asarray(input_data)\n",
+    "\n",
+    "# reshape the array as we are predicting for one instance\n",
+    "input_data_reshaped = input_data_as_numpy_array.reshape(1,-1)\n",
+    "\n",
+    "prediction = loaded_model.predict(input_data_reshaped)\n",
+    "print(prediction)\n",
+    "\n",
+    "if (prediction[0] == 0):\n",
+    "  print('The person is not diabetic')\n",
+    "else:\n",
+    "  print('The person is diabetic')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-16T10:52:32.109359Z",
+     "start_time": "2024-05-16T10:52:32.048907Z"
+    }
+   },
+   "id": "87d248a731c8ae7b",
+   "execution_count": 48
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'columns'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[51], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m column \u001B[38;5;129;01min\u001B[39;00m \u001B[43mX\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcolumns\u001B[49m:\n\u001B[1;32m      2\u001B[0m   \u001B[38;5;28mprint\u001B[39m(column)\n",
+      "\u001B[0;31mAttributeError\u001B[0m: 'numpy.ndarray' object has no attribute 'columns'"
+     ]
+    }
+   ],
+   "source": [
+    "for column in X.columns:\n",
+    "  print(column)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-16T12:32:35.337220Z",
+     "start_time": "2024-05-16T12:32:35.175705Z"
+    }
+   },
+   "id": "c46ca05f0412c808",
+   "execution_count": 51
   }
  ],
  "metadata": {
